# mbc-pfs

./: .gitignore  README.md  ablation.py  build_ablation_configs.py  build_design_matrix.py  build_pfs.py  commands.txt  config.py  coxph.py  cpu_nested_cv.py  cv_config.py  data_paths.py  deephit.py  deepsurv.py  dl_nested_cv.py  dryrun.py  feature_groups.py  gbsa.py  gbsa_shap.py  manuscript.py  manuscript_utils.py  model_setup.py  nested_cv_splits.py  nested_cv_utils.py  pipeline_overview.py  plots.py  preprocess.py  pyproject.toml  qc.py  requirements.txt  rsf.py  survival_metrics.py  survival_stats.py  utils.py
data/: brca_dx_1st_seq_OS.csv  feature_display_names.json  feature_groups.json  features_dict.json
design_matrix_pipeline/: __init__.py  assembly.py  context.py  utils.py
design_matrix_pipeline/modalities/: __init__.py  base.py  cancer_presence.py  clinical.py  diagnosis.py  ecog.py  genomics.py  history.py  local_treatment.py  pdl1_mmr.py  prior_lines.py  progression.py  report_presence.py  treatment.py  tumor_markers.py  tumor_sites.py
dl_lib/pycox/models/: loss.py
scripts/: common_args.py  compare_artifacts.py
third_party_licenses/survival-intro/: LICENSE
