[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mbc-pfs"
version = "0.0.1"
description = "Install local helper packages for notebooks"

[tool.setuptools.packages.find]
include = ["design_matrix_pipeline", "design_matrix_pipeline.*"]

[tool.setuptools]
py-modules = ["config", "utils"]
